// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component in moved car form > matches snapshot 1`] = `
<div>
  <p>
    Pakolliset kentät on merkitty tähdellä *
  </p>
  <div>
    <div
      class="rectification-info-container"
    >
      <div
        class="radio-group-section"
      >
        <legend
          class="field-label"
        >
          Teen oikaisuvaatimuksen
          <span
            class="required-icon"
          >
            *
          </span>
        </legend>
        <div
          class="radio-group-container"
        >
          <div
            class="RadioButton-module_radioButton__XQOVF radio-button_hds-radio-button__yVt-R"
          >
            <input
              class="RadioButton-module_input__fvkjJ radio-button_hds-radio-button__input__J6aiX"
              id="2"
              type="radio"
              value="2"
            />
            <label
              class="RadioButton-module_label__H5v8w radio-button_hds-radio-button__label__jPiEm"
              for="2"
            >
              Ajoneuvon omistajana/haltijana
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__XQOVF radio-button_hds-radio-button__yVt-R"
          >
            <input
              class="RadioButton-module_input__fvkjJ radio-button_hds-radio-button__input__J6aiX"
              id="3"
              type="radio"
              value="3"
            />
            <label
              class="RadioButton-module_label__H5v8w radio-button_hds-radio-button__label__jPiEm"
              for="3"
            >
              Valtakirjalla (toisen puolesta)
            </label>
          </div>
        </div>
      </div>
      <div
        class="rectification-form-user-details"
      >
        <div>
          <div>
            <legend
              class="field-label"
            >
              Nimi
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="Tieto haettu Helsinki-profiilista"
              class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            Test User
          </p>
          <div>
            <legend
              class="field-label"
            >
              Henkilötunnus
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="Tieto haettu Helsinki-profiilista"
              class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            123456-789A
          </p>
          <div>
            <legend
              class="field-label"
            >
              Sähköpostiosoite
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="Tieto haettu Helsinki-profiilista"
              class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            test.user@test.fi
          </p>
        </div>
      </div>
      <div
        class="rectification-poa-fileinput"
      >
        <div
          class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
        >
          <label
            class="FieldLabel-module_label__EyKsf "
            for="rectificationPOAFile"
          >
            Liitä valtakirja
          </label>
          <div
            class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
          >
            <div
              class="FileInput-module_fileInputContainer__UGT7-"
            >
              <div
                aria-hidden="true"
                class="FileInput-module_dragAndDrop__b-IBm"
              >
                <div
                  class="FileInput-module_dragAndDropLabel__cw2DM"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="upload"
                    class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 1.63605L17.6569 7.2929L16.2426 8.70712L13 5.46505V18H11V5.46505L7.75736 8.70712L6.34315 7.2929L12 1.63605ZM5 15V20H19V15H21V22H3V15H5Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="FileInput-module_dragAndDropLabelText__oF5De"
                  >
                    Raahaa tiedostot tähän
                  </span>
                </div>
              </div>
              <div
                class="FileInput-module_dragAndDropHelperText__beM3B"
              >
                tai valitse tiedostot laitteeltasi
              </div>
              <div
                class="FileInput-module_fileInputWrapper__maC5l"
              >
                <button
                  aria-hidden="true"
                  class="Button-module_button__P7hTI Button-module_secondary__ieoHb"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    aria-hidden="true"
                    class="Button-module_icon__Di-Ga"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="plus"
                      class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13 6V11H18V13H13V18H11V13H6V11H11V6H13Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <span>
                    Lisää tiedosto
                  </span>
                </button>
                <input
                  accept=".jpg, .pdf"
                  aria-describedby="rectificationPOAFile-helper"
                  class="FileInput-module_fileInput__gPwX4"
                  id="rectificationPOAFile"
                  type="file"
                />
              </div>
            </div>
          </div>
          <div
            class="TextInput-module_helperText__B19Ty text-input_hds-text-input__helper-text__gaXd1"
            id="rectificationPOAFile-helper"
          >
            Voit liittää vain yhden tiedoston. 
Sallitut tiedostomuodot ovat JPG ja PDF. 
Liitetiedoston suurin sallittu koko on 5 megatavua.
          </div>
        </div>
        <ul
          aria-label="Yhtään tiedostoa ei ole valittu."
          class="FileInput-module_fileList__CaZYw"
          id="rectificationPOAFile-list"
          tabindex="-1"
        />
      </div>
    </div>
    <hr />
    <div
      class="rectification-link-to-profile"
    >
      <svg
        aria-hidden="true"
        aria-label="check-circle"
        class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
        color="var(--color-info)"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Merkityt tiedot on haettu Helsinki-profiilistasi.
      </span>
      <a
        aria-label="Siirry Helsinki-profiiliin muokataksesi tietoja. Avaa toisen verkkosivun."
        class="Link-module_link__8XuKE link_hds-link__MZCD0 Link-module_link-medium__TmjYy link_hds-link--medium__I1qEo Link-module_hasIconEnd__-doNk"
        href="https://profiili.test.hel.ninja"
        rel="noopener"
        target="_blank"
      >
        Siirry Helsinki-profiiliin muokataksesi tietoja.
        <span
          style="white-space: pre;"
        >
           
          (Avautuu uudessa välilehdessä.)
        </span>
        <div
          aria-hidden="true"
          style="display: contents;"
        >
          <svg
            aria-hidden="true"
            aria-label="link-external"
            class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5 3V19H21V21H3V3H5ZM21 3V12H19V6.413L9.91421 15.5L8.5 14.0858L17.585 5H12V3H21Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </a>
    </div>
    <div
      class="rectification-form-container"
    >
      <div
        class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
      >
        <label
          class="FieldLabel-module_label__EyKsf "
          for="address"
        >
          Lähiosoite
          <span
            class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
        >
          <input
            class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
            id="address"
            name="address.streetAddress"
            placeholder="Esim. Elimäenkatu 5"
            required=""
            type="text"
          />
        </div>
      </div>
      <div
        class="rectification-subgrid"
      >
        <div
          class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
        >
          <label
            class="FieldLabel-module_label__EyKsf "
            for="zipCode"
          >
            Postinumero
            <span
              class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
            >
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
          >
            <input
              class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
              id="zipCode"
              name="address.postCode"
              placeholder="Esim. 00100"
              required=""
              type="text"
            />
          </div>
        </div>
        <div
          class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
        >
          <label
            class="FieldLabel-module_label__EyKsf "
            for="city"
          >
            Postitoimipaikka
            <span
              class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
            >
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
          >
            <input
              class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
              id="city"
              name="address.postOffice"
              placeholder="Esim. Helsinki"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
      >
        <label
          class="FieldLabel-module_label__EyKsf "
          for="phone"
        >
          Puhelinnumero
          <span
            class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
        >
          <input
            class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
            id="phone"
            name="mobilePhone"
            placeholder="Esim. +358401234567"
            required=""
            type="text"
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
      >
        <label
          class="FieldLabel-module_label__EyKsf "
          for="IBAN"
        >
          Pankkitilinumero (IBAN)
          <span
            class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
        >
          <input
            class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
            id="IBAN"
            name="iban"
            placeholder="Esim. FI97 8000 1700 9033 30"
            required=""
            type="text"
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6 rectification-textarea"
      >
        <label
          class="FieldLabel-module_label__EyKsf "
          for="rectification-content"
        >
          Oikaisuvaatimuksen sisältö
          <span
            class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
        >
          <textarea
            aria-describedby="rectification-content-helper"
            class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
            id="rectification-content"
            name="description"
            required=""
          />
        </div>
        <div
          class="TextInput-module_helperText__B19Ty text-input_hds-text-input__helper-text__gaXd1"
          id="rectification-content-helper"
        >
          undefined/2500 merkkiä
        </div>
      </div>
      <div
        class="rectification-attachments"
      >
        <div
          class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6 rectification-fileinput"
        >
          <label
            class="FieldLabel-module_label__EyKsf "
            for="rectificationAttachments"
          >
            Liitetiedostot
          </label>
          <div
            class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
          >
            <div
              class="FileInput-module_fileInputContainer__UGT7-"
            >
              <div
                aria-hidden="true"
                class="FileInput-module_dragAndDrop__b-IBm"
              >
                <div
                  class="FileInput-module_dragAndDropLabel__cw2DM"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="upload"
                    class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 1.63605L17.6569 7.2929L16.2426 8.70712L13 5.46505V18H11V5.46505L7.75736 8.70712L6.34315 7.2929L12 1.63605ZM5 15V20H19V15H21V22H3V15H5Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="FileInput-module_dragAndDropLabelText__oF5De"
                  >
                    Raahaa tiedostot tähän
                  </span>
                </div>
              </div>
              <div
                class="FileInput-module_dragAndDropHelperText__beM3B"
              >
                tai valitse tiedostot laitteeltasi
              </div>
              <div
                class="FileInput-module_fileInputWrapper__maC5l"
              >
                <button
                  aria-hidden="true"
                  class="Button-module_button__P7hTI Button-module_secondary__ieoHb"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    aria-hidden="true"
                    class="Button-module_icon__Di-Ga"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="plus"
                      class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13 6V11H18V13H13V18H11V13H6V11H11V6H13Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <span>
                    Lisää tiedostoja
                  </span>
                </button>
                <input
                  accept=".jpg, .pdf"
                  aria-describedby="rectificationAttachments-helper"
                  class="FileInput-module_fileInput__gPwX4"
                  id="rectificationAttachments"
                  multiple=""
                  type="file"
                />
              </div>
            </div>
          </div>
          <div
            class="TextInput-module_helperText__B19Ty text-input_hds-text-input__helper-text__gaXd1"
            id="rectificationAttachments-helper"
          >
            Voit liittää oikaisuvaatimukseen enintään kolme liitettä. 
Sallitut tiedostomuodot ovat JPG ja PDF. 
Liitetiedoston suurin sallittu koko on 5 megatavua.
          </div>
        </div>
        <ul
          aria-label="Yhtään tiedostoa ei ole valittu."
          class="FileInput-module_fileList__CaZYw"
          id="rectificationAttachments-list"
          tabindex="-1"
        />
      </div>
      <div
        class="rectification-delivery-decision radio-group-section"
      >
        <legend
          class="field-label"
        >
          Haluan päätöksen
          <span
            class="required-icon"
          >
            *
          </span>
        </legend>
        <div
          class="radio-group-container"
        >
          <div
            class="RadioButton-module_radioButton__XQOVF radio-button_hds-radio-button__yVt-R"
          >
            <input
              class="RadioButton-module_input__fvkjJ radio-button_hds-radio-button__input__J6aiX"
              id="toParkingService"
              type="radio"
              value="toParkingService"
            />
            <label
              class="RadioButton-module_label__H5v8w radio-button_hds-radio-button__label__jPiEm"
              for="toParkingService"
            >
              Pysäköinnin asiointikansiooni
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__XQOVF radio-button_hds-radio-button__yVt-R"
          >
            <input
              class="RadioButton-module_input__fvkjJ radio-button_hds-radio-button__input__J6aiX"
              id="byMail"
              type="radio"
              value="byMail"
            />
            <label
              class="RadioButton-module_label__H5v8w radio-button_hds-radio-button__label__jPiEm"
              for="byMail"
            >
              Kirjeitse antamaani osoitteeseen
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component in parking fine appeal form > matches snapshot 1`] = `
<div>
  <p>
    Pakolliset kentät on merkitty tähdellä *
  </p>
  <div>
    <div
      class="rectification-info-container"
    >
      <div
        class="radio-group-section"
      >
        <legend
          class="field-label"
        >
          Teen oikaisuvaatimuksen
          <span
            class="required-icon"
          >
            *
          </span>
        </legend>
        <div
          class="radio-group-container"
        >
          <div
            class="RadioButton-module_radioButton__XQOVF radio-button_hds-radio-button__yVt-R"
          >
            <input
              class="RadioButton-module_input__fvkjJ radio-button_hds-radio-button__input__J6aiX"
              id="1"
              type="radio"
              value="1"
            />
            <label
              class="RadioButton-module_label__H5v8w radio-button_hds-radio-button__label__jPiEm"
              for="1"
            >
              Ajoneuvon kuljettajana
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__XQOVF radio-button_hds-radio-button__yVt-R"
          >
            <input
              class="RadioButton-module_input__fvkjJ radio-button_hds-radio-button__input__J6aiX"
              id="2"
              type="radio"
              value="2"
            />
            <label
              class="RadioButton-module_label__H5v8w radio-button_hds-radio-button__label__jPiEm"
              for="2"
            >
              Ajoneuvon omistajana/haltijana
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__XQOVF radio-button_hds-radio-button__yVt-R"
          >
            <input
              class="RadioButton-module_input__fvkjJ radio-button_hds-radio-button__input__J6aiX"
              id="3"
              type="radio"
              value="3"
            />
            <label
              class="RadioButton-module_label__H5v8w radio-button_hds-radio-button__label__jPiEm"
              for="3"
            >
              Valtakirjalla (toisen puolesta)
            </label>
          </div>
        </div>
      </div>
      <div
        class="rectification-form-user-details"
      >
        <div>
          <div>
            <legend
              class="field-label"
            >
              Nimi
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="Tieto haettu Helsinki-profiilista"
              class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            Test User
          </p>
          <div>
            <legend
              class="field-label"
            >
              Henkilötunnus
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="Tieto haettu Helsinki-profiilista"
              class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            123456-789A
          </p>
          <div>
            <legend
              class="field-label"
            >
              Sähköpostiosoite
              <span
                class="required-icon"
              >
                *
              </span>
            </legend>
            <svg
              aria-hidden="true"
              aria-label="Tieto haettu Helsinki-profiilista"
              class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
              color="var(--color-info)"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p>
            test.user@test.fi
          </p>
        </div>
      </div>
      <div
        class="rectification-poa-fileinput"
      >
        <div
          class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
        >
          <label
            class="FieldLabel-module_label__EyKsf "
            for="rectificationPOAFile"
          >
            Liitä valtakirja
          </label>
          <div
            class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
          >
            <div
              class="FileInput-module_fileInputContainer__UGT7-"
            >
              <div
                aria-hidden="true"
                class="FileInput-module_dragAndDrop__b-IBm"
              >
                <div
                  class="FileInput-module_dragAndDropLabel__cw2DM"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="upload"
                    class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 1.63605L17.6569 7.2929L16.2426 8.70712L13 5.46505V18H11V5.46505L7.75736 8.70712L6.34315 7.2929L12 1.63605ZM5 15V20H19V15H21V22H3V15H5Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="FileInput-module_dragAndDropLabelText__oF5De"
                  >
                    Raahaa tiedostot tähän
                  </span>
                </div>
              </div>
              <div
                class="FileInput-module_dragAndDropHelperText__beM3B"
              >
                tai valitse tiedostot laitteeltasi
              </div>
              <div
                class="FileInput-module_fileInputWrapper__maC5l"
              >
                <button
                  aria-hidden="true"
                  class="Button-module_button__P7hTI Button-module_secondary__ieoHb"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    aria-hidden="true"
                    class="Button-module_icon__Di-Ga"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="plus"
                      class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13 6V11H18V13H13V18H11V13H6V11H11V6H13Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <span>
                    Lisää tiedosto
                  </span>
                </button>
                <input
                  accept=".jpg, .pdf"
                  aria-describedby="rectificationPOAFile-helper"
                  class="FileInput-module_fileInput__gPwX4"
                  id="rectificationPOAFile"
                  type="file"
                />
              </div>
            </div>
          </div>
          <div
            class="TextInput-module_helperText__B19Ty text-input_hds-text-input__helper-text__gaXd1"
            id="rectificationPOAFile-helper"
          >
            Voit liittää vain yhden tiedoston. 
Sallitut tiedostomuodot ovat JPG ja PDF. 
Liitetiedoston suurin sallittu koko on 5 megatavua.
          </div>
        </div>
        <ul
          aria-label="Yhtään tiedostoa ei ole valittu."
          class="FileInput-module_fileList__CaZYw"
          id="rectificationPOAFile-list"
          tabindex="-1"
        />
      </div>
    </div>
    <hr />
    <div
      class="rectification-link-to-profile"
    >
      <svg
        aria-hidden="true"
        aria-label="check-circle"
        class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
        color="var(--color-info)"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Merkityt tiedot on haettu Helsinki-profiilistasi.
      </span>
      <a
        aria-label="Siirry Helsinki-profiiliin muokataksesi tietoja. Avaa toisen verkkosivun."
        class="Link-module_link__8XuKE link_hds-link__MZCD0 Link-module_link-medium__TmjYy link_hds-link--medium__I1qEo Link-module_hasIconEnd__-doNk"
        href="https://profiili.test.hel.ninja"
        rel="noopener"
        target="_blank"
      >
        Siirry Helsinki-profiiliin muokataksesi tietoja.
        <span
          style="white-space: pre;"
        >
           
          (Avautuu uudessa välilehdessä.)
        </span>
        <div
          aria-hidden="true"
          style="display: contents;"
        >
          <svg
            aria-hidden="true"
            aria-label="link-external"
            class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5 3V19H21V21H3V3H5ZM21 3V12H19V6.413L9.91421 15.5L8.5 14.0858L17.585 5H12V3H21Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </a>
    </div>
    <div
      class="rectification-form-container"
    >
      <div
        class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
      >
        <label
          class="FieldLabel-module_label__EyKsf "
          for="address"
        >
          Lähiosoite
          <span
            class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
        >
          <input
            class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
            id="address"
            name="address.streetAddress"
            placeholder="Esim. Elimäenkatu 5"
            required=""
            type="text"
          />
        </div>
      </div>
      <div
        class="rectification-subgrid"
      >
        <div
          class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
        >
          <label
            class="FieldLabel-module_label__EyKsf "
            for="zipCode"
          >
            Postinumero
            <span
              class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
            >
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
          >
            <input
              class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
              id="zipCode"
              name="address.postCode"
              placeholder="Esim. 00100"
              required=""
              type="text"
            />
          </div>
        </div>
        <div
          class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
        >
          <label
            class="FieldLabel-module_label__EyKsf "
            for="city"
          >
            Postitoimipaikka
            <span
              class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
            >
              *
            </span>
          </label>
          <div
            class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
          >
            <input
              class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
              id="city"
              name="address.postOffice"
              placeholder="Esim. Helsinki"
              required=""
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
      >
        <label
          class="FieldLabel-module_label__EyKsf "
          for="phone"
        >
          Puhelinnumero
          <span
            class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
        >
          <input
            class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
            id="phone"
            name="mobilePhone"
            placeholder="Esim. +358401234567"
            required=""
            type="text"
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6"
      >
        <label
          class="FieldLabel-module_label__EyKsf "
          for="IBAN"
        >
          Pankkitilinumero (IBAN)
          <span
            class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
        >
          <input
            class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
            id="IBAN"
            name="iban"
            placeholder="Esim. FI97 8000 1700 9033 30"
            required=""
            type="text"
          />
        </div>
      </div>
      <div
        class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6 rectification-textarea"
      >
        <label
          class="FieldLabel-module_label__EyKsf "
          for="rectification-content"
        >
          Oikaisuvaatimuksen sisältö
          <span
            class="RequiredIndicator-module_indicator__f1SnK text-input_hds-text-input__required__ZUnA2"
          >
            *
          </span>
        </label>
        <div
          class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
        >
          <textarea
            aria-describedby="rectification-content-helper"
            class="TextInput-module_input__LLKkZ text-input_hds-text-input__input__Kglq3"
            id="rectification-content"
            name="description"
            required=""
          />
        </div>
        <div
          class="TextInput-module_helperText__B19Ty text-input_hds-text-input__helper-text__gaXd1"
          id="rectification-content-helper"
        >
          undefined/2500 merkkiä
        </div>
      </div>
      <div
        class="rectification-attachments"
      >
        <div
          class="TextInput-module_root__lPctx text-input_hds-text-input__mG8r6 rectification-fileinput"
        >
          <label
            class="FieldLabel-module_label__EyKsf "
            for="rectificationAttachments"
          >
            Liitetiedostot
          </label>
          <div
            class="TextInput-module_inputWrapper__9kbLn text-input_hds-text-input__input-wrapper__1RzOg"
          >
            <div
              class="FileInput-module_fileInputContainer__UGT7-"
            >
              <div
                aria-hidden="true"
                class="FileInput-module_dragAndDrop__b-IBm"
              >
                <div
                  class="FileInput-module_dragAndDropLabel__cw2DM"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="upload"
                    class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 1.63605L17.6569 7.2929L16.2426 8.70712L13 5.46505V18H11V5.46505L7.75736 8.70712L6.34315 7.2929L12 1.63605ZM5 15V20H19V15H21V22H3V15H5Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="FileInput-module_dragAndDropLabelText__oF5De"
                  >
                    Raahaa tiedostot tähän
                  </span>
                </div>
              </div>
              <div
                class="FileInput-module_dragAndDropHelperText__beM3B"
              >
                tai valitse tiedostot laitteeltasi
              </div>
              <div
                class="FileInput-module_fileInputWrapper__maC5l"
              >
                <button
                  aria-hidden="true"
                  class="Button-module_button__P7hTI Button-module_secondary__ieoHb"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    aria-hidden="true"
                    class="Button-module_icon__Di-Ga"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="plus"
                      class="Icon-module_icon__JQmVx icon_hds-icon__O6EV0 Icon-module_small__nAApk icon_hds-icon--size-s__SloSo"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13 6V11H18V13H13V18H11V13H6V11H11V6H13Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <span>
                    Lisää tiedostoja
                  </span>
                </button>
                <input
                  accept=".jpg, .pdf"
                  aria-describedby="rectificationAttachments-helper"
                  class="FileInput-module_fileInput__gPwX4"
                  id="rectificationAttachments"
                  multiple=""
                  type="file"
                />
              </div>
            </div>
          </div>
          <div
            class="TextInput-module_helperText__B19Ty text-input_hds-text-input__helper-text__gaXd1"
            id="rectificationAttachments-helper"
          >
            Voit liittää oikaisuvaatimukseen enintään kolme liitettä. 
Sallitut tiedostomuodot ovat JPG ja PDF. 
Liitetiedoston suurin sallittu koko on 5 megatavua.
          </div>
        </div>
        <ul
          aria-label="Yhtään tiedostoa ei ole valittu."
          class="FileInput-module_fileList__CaZYw"
          id="rectificationAttachments-list"
          tabindex="-1"
        />
      </div>
      <div
        class="rectification-delivery-decision radio-group-section"
      >
        <legend
          class="field-label"
        >
          Haluan päätöksen
          <span
            class="required-icon"
          >
            *
          </span>
        </legend>
        <div
          class="radio-group-container"
        >
          <div
            class="RadioButton-module_radioButton__XQOVF radio-button_hds-radio-button__yVt-R"
          >
            <input
              class="RadioButton-module_input__fvkjJ radio-button_hds-radio-button__input__J6aiX"
              id="toParkingService"
              type="radio"
              value="toParkingService"
            />
            <label
              class="RadioButton-module_label__H5v8w radio-button_hds-radio-button__label__jPiEm"
              for="toParkingService"
            >
              Pysäköinnin asiointikansiooni
            </label>
          </div>
          <div
            class="RadioButton-module_radioButton__XQOVF radio-button_hds-radio-button__yVt-R"
          >
            <input
              class="RadioButton-module_input__fvkjJ radio-button_hds-radio-button__input__J6aiX"
              id="byMail"
              type="radio"
              value="byMail"
            />
            <label
              class="RadioButton-module_label__H5v8w radio-button_hds-radio-button__label__jPiEm"
              for="byMail"
            >
              Kirjeitse antamaani osoitteeseen
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
